bugfix: add overflow-x hidden to avoid horizontal scroll bar on screen sizes that use the sliding nav menu

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,6 +17,7 @@ body {
   right: 0;
   bottom: 0;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #app-root::-webkit-scrollbar {
